--- a/style.css
+++ b/style.css
@@ -1,20 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+
 body{
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
+    background-color: whitesmoke;
+    
 }
 
 section{
     width:100%;
-    height:70vh;
+    height:100vh;
     box-sizing: border-box;
 }
 
 section.sec1
 {
-    background: url(img1.jpg);
+    background-image: url(img2.jpg);
     background-size: cover;
-    background-position: center;
-    
+    background-color:white;
+    background-position: center center;
     background-attachment: fixed;
+}
+
+
+section.sec2
+{
+
+    padding: 50px 100px;
+    background-color:rgba(41, 41, 184, 0.678);
+    color:rgb(102, 9, 209);
+    font-size: 130px;
+    text-align: center;
+    vertical-align: middle;
+    font-family: 'Bungee Shade', cursive;
+    vertical-align: middle;
+    alt: " ";
+}
+.small{
+    font-size: 30px;
+    color:rgb(102, 9, 209);
+    font-family: monospace;
+}
+section.sec3
+{    
+    background-image: url(img3.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    
 }
